# multichannel-helpdesk

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  bot.py  contacts.py  dashboard.py  demo.py  health.py  notifications.py  tenants.py  tickets.py  users.py  webhooks.py
backend/app/api/schemas/: auth.py  bot.py  contact.py  tenant.py  ticket.py
backend/app/application/services/: auth_service.py  bot_parser.py  bot_service.py  contact_service.py  notification_service.py  seed_service.py  sla.py  status_flow.py  tenant_service.py  ticket_codes.py  ticket_service.py  webhook_service.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/domain/: enums.py
backend/app/domain/entities/: channel_payload.py  contact.py  inbound_message.py  notification.py  tenant.py  ticket.py  ticket_event.py  ticket_message.py  user.py
backend/app/infra/channels/: generic.py  telegram.py  whatsapp.py
backend/app/infra/database/: mongodb.py
backend/app/infra/database/repositories/: base.py  channel_payload_repository.py  contact_repository.py  notification_repository.py  tenant_repository.py  ticket_event_repository.py  (+3 more)
backend/scripts/: seed.py
backend/tests/integration/: conftest.py  test_auth.py  test_bot.py  test_permissions.py  test_tickets.py  test_users.py  test_webhooks.py
backend/tests/unit/: test_bot_parser.py  test_sla.py  test_status_flow.py  test_ticket_codes.py
(+22 files in other folders)
